--- a/index.html
+++ b/index.html
@@ -93,5 +93,7 @@
     atualizarContadores();
   </script>
 
+<img src="WhatsApp Image 2025-06-10 at 21.14.58.jpeg" alt="Foto nossa" style="margin-top: 40px; max-width: 90%; border-radius: 20px; box-shadow: 0 4px 10px rgba(0,0,0,0.2);">
+
 </body>
 </html>
